DERBY-6856: Fix more deprecation warnings when Derby is compiled with JDK 9 build 116; commit derby-6856-04-ab-autoboxingDeprecationWarnings-part2.diff.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1742858 13f79535-47bb-0310-9956-ffa450edef68